--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,8 @@
   "description": "none given",
   "main": "main.js",
   "dependencies": {
+    "@arduino/arduino-iot-client": "^1.3.3",
+    "dotenv": "^8.2.0",
     "request": "2.x",
     "request-promise": "4.x"
   },
